# Malicious-file-sharing-based-on-UPSI

./: .gitignore  Development_server.txt  Notepad.txt  README.md  create_and_view_db.py  malware_detection.db-shm  malware_detection.db-wal  package-lock.json  requirements.txt  run.sh  view_db.py
.specstory/history/: 2025-03-15_09-51-web-app-from-0-to-1.md  2025-03-16_11-19-文档功能说明与规则.md  2025-03-16_12-14-企业用户登录入口与文件上传功能.md  2025-03-17_10-26-resolving-import-error-in-python-code.md  2025-03-19_15-41-后端运行错误与前端连接失败.md  2025-03-24_10-42-项目进度查询.md  2025-03-25_09-39-前端开发服务器显示源代码问题.md  2025-03-29_07-47-整理markdown文件.md  2025-03-29_09-12-数据库程序分布理解.md  2025-03-29_09-48-数据库初始化程序设计.md  2025-03-30_08-40-推荐数据库图形化管理工具.md
algorithm/: CMakeLists.txt  README.md  README_algorithm.md
algorithm/include/: psi.h
algorithm/src/: psi.cpp  test_psi.cpp
app/: main.py
app/core/: config.py
app/db/: session.py
app/models/: User.py  scan.py
app/services/: Reset_password.py  auth.py  scan.py  sign_login.py
backend/: Dockerfile  README.md  README_backend.md  docker-compose.yml  main.py  psi_wrapper.py  requirements.txt
backend/config/: settings.py
backend/core/: __init__.py  config.py  config.py.bak  deps.py  security.py
data/: test_direct.sqlite  test_sqlalchemy.sqlite
database/: data.py
docs/: README.md  database.md  directory_structure.md  project_notes.md
frontend/: DOCUMENTATION.md  README.md  README_frontend.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  (+2 more)
tools/: README.md  init_db.py  launch.py  test_db.py  view_db_for_test.py
(+79 files in other folders)
